--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <!-- WORKS SECTION -->
 <section class="works-section" id="works">
-  <h2 class="works-title">WORKS</h2>
+  <h2 class="works-title">WORKS SECTION</h2>
   
   <div class="works-list">
     <!-- Work Card 1 -->
